--- a/web/package.json
+++ b/web/package.json
@@ -123,7 +123,7 @@
       }
     },
     "rules": {
-      "max-len": "off",
+      "max-len": 0,
       "react/jsx-filename-extension": [
         1,
         {
@@ -136,6 +136,7 @@
       "react/prop-types": 0,
       "react/require-default-props": 0,
       "react/jsx-one-expression-per-line": 0,
+      "react/no-array-index-key": 0,
       "jsx-a11y/no-static-element-interactions": 0,
       "jsx-a11y/anchor-is-valid": 0,
       "jsx-a11y/click-events-have-key-events": 0,
