--- a/web/package.json
+++ b/web/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ui-starter",
+  "name": "apt-developer-dashboard",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -39,7 +39,7 @@
     "whatwg-fetch": "2.0.3"
   },
   "scripts": {
-    "start": "node scripts/start.js",
+    "start": "PORT=7777 node scripts/start.js",
     "dev": "npm run start",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom",
