--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -17,6 +17,16 @@ builds:
     goarch:
       - amd64
     ldflags: -X "main.buildTime={{.Date}}" -X "main.gitCommit={{.Commit}}" -X "main.version={{.Version}}"
+brew:
+  github:
+    owner: apt
+    name: homebrew-tap
+  folder: Formula
+  homepage: "https://github.com/twosson/kubeapt"
+  description: ""
+  skip_upload: true
+  test: |
+    system "#{bin}/apt version"
 nfpm:
   formats:
     - deb
