--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -68,3 +68,8 @@
 [prune]
   go-tests = true
   unused-packages = true
+
+[[constraint]]
+  branch = "master"
+  name = "github.com/heptio/go-telemetry"
+
