--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -3,7 +3,7 @@ release:
   prerelease: true
 before:
   hooks:
-    - make embed-go
+    - make web-build
 project_name: apt
 builds:
   - main: ./cmd/apt/main.go
