--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -21,10 +21,10 @@ brew:
   github:
     owner: apt
     name: homebrew-tap
+  download_strategy: GitHubPrivateRepositoryReleaseDownloadStrategy
   folder: Formula
   homepage: "https://github.com/twosson/kubeapt"
   description: ""
-  skip_upload: true
   test: |
     system "#{bin}/apt version"
 nfpm:
